--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 <h5 class="text-center">Rajan Khinvasara</h5>
 
                                 <div class="img-container">
-                                    <img src="./assets/img/home-card.png" alt="rajan_khinvasara">
+                                    <img src="./assets/img/home_card.jpg" alt="rajan_khinvasara">
                                 </div>
 
                                 <div class="text-end py-3">
@@ -187,7 +187,7 @@
       <!-- Footer -->
       <div class="footer">
         <div class="row">
-            <div class="col-md-6 col-lg-4 bg-pink py-5">
+            <div class="col-md-6 col-lg-4 bg-pink py-2">
                 <div class="container-02">
                   <a href="https://www.instagram.com/rajankhinvasara/">
                     <div class="footer-head">
@@ -205,7 +205,7 @@
                   </a>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 bg-blue py-5">
+            <div class="col-md-6 col-lg-4 bg-blue py-2">
                 <div class="container-02">
                   <a href="https://www.facebook.com/profile.php?id=100003834536292">
                     <div class="footer-head">
@@ -223,7 +223,7 @@
                   </a>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 bg-red py-5">
+            <div class="col-md-6 col-lg-4 bg-red py-2">
                 <div class="container-02">
                   <a href="https://www.youtube.com/watch?v=xBFyBWYNhS8">
                     <div class="footer-head">
