added more photos in media

--- a/awards.html
+++ b/awards.html
@@ -118,17 +118,22 @@
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="image-container">
-                        <img src="./assets/img/gallery3.png" class="gallery" alt="">
+                        <img src="./assets/img/mediagallery/1.jpeg" class="gallery" alt="">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="image-container">
-                        <img src="./assets/img/gallery4.png" class="gallery" alt="">
+                        <img src="./assets/img/gallery8.png" class="gallery" alt="">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-8">
                     <div class="image-container">
                         <img src="./assets/img/gallery5.png" class="gallery" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="image-container">
+                        <img src="./assets/img/gallery3.png" class="gallery" alt="">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
@@ -141,9 +146,51 @@
                         <img src="./assets/img/gallery7.png" class="gallery" alt="">
                     </div>
                 </div>
+                
                 <div class="col-md-6 col-lg-4">
                     <div class="image-container">
-                        <img src="./assets/img/gallery8.png" class="gallery" alt="">
+                        <img src="./assets/img/gallery4.png" class="gallery" alt="">
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4">
+                    <div class="image-container">
+                        <img src="./assets/img/mediagallery/3.jpg" class="gallery" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="image-container">
+                        <img src="./assets/img/mediagallery/4.jpg" class="gallery" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="image-container">
+                        <img src="./assets/img/mediagallery/5.jpg" class="gallery" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="image-container">
+                        <img src="./assets/img/mediagallery/6.jpg" class="gallery" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="image-container">
+                        <img src="./assets/img/mediagallery/7.jpg" class="gallery" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="image-container">
+                        <img src="./assets/img/mediagallery/8.jpg" class="gallery" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="image-container">
+                        <img src="./assets/img/mediagallery/9.jpg" class="gallery" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="image-container">
+                        <img src="./assets/img/mediagallery/10.jpg" class="gallery" alt="">
                     </div>
                 </div>
             </div>
